# unscript

./: .gitignore  CHANGELOG.md  README.md  performance.md  pyproject.toml
.github/workflows/: publish.yml  pytest.yml
benchmark/: full.py  quick.py
scripts/: publish.py  publish.sh
src/unscript/: __init__.py  script_ranges.py  unscript.py
tests/: test_clean_script.py  test_detect_script.py  test_ranges.py  test_unscript.py
