[project]
name = "unscript"
version = "0.0.2"
authors = [
    {name = "Omar Kamali", email = "unscript@omarkama.li"},
]
description = "A writing script-aware library for cleaning text for NLP, training and analysis."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/omarkamali/unscript"
Issues = "https://github.com/omarkamali/unscript/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unscript"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
]

[tool.hatch.envs.default]

[tool.hatch.envs.default.scripts]
publish = "./scripts/publish.sh"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 